Update Spring Boot 4 configurations and security setup