@@ -10,14 +10,14 @@ public class ResourceNotFoundException extends RuntimeException {
     }
 
     public ResourceNotFoundException(String resourceName, String field, String fieldName) {
-        super(String.format("%s not found with %s: %s", resourceName, field, fieldName));
+        super("%s not found with %s: %s".formatted(resourceName, field, fieldName));
         this.resourceName = resourceName;
         this.field = field;
         this.fieldName = fieldName;
     }
 
     public ResourceNotFoundException(String resourceName, String field, Long fieldId) {
-        super(String.format("%s not found with %s: %d", resourceName, field, fieldId));
+        super("%s not found with %s: %d".formatted(resourceName, field, fieldId));
         this.resourceName = resourceName;
         this.field = field;
         this.fieldId = fieldId;
